Revision history for Net-XMPP2

0.03
         - implemented SAX event generator for easier integration
           with other XML libraries and generation of DOM.
         - added the possibility to completly restore the original
           XML data from a Net::XMPP2::Node.
         - implemented the component protocol to establish a component
           stream with a server.
         - reordered events a bit so that session_ready comes after
           roster retrieval (when it is retrieved)
         - added possibility to set the initial presence priority
           or prevent sending of initial presence
           (see Net::XMPP2::IM::Connection).
         - fixed some minor issue with handling invalid disco results
         - added send_*_hook event hooks for future extensions
           like the entity capabilities to be able to add payload
           to outgoing stanzas

0.02 Wed Jul 11 22:55:56 CEST 2007
         - added iq_xml event
         - added development client example in samples/devcl/
         - added some debugging events: debug_recv, debug_send, send_stanza_data,
           and recv_stanza_xml.
         - the error event now also provides error reporting
           about exceptions (eq. in IQ callbacks, which is certainly
           useful for development!)
         - fixed error in binding-handling in case the bind iq gets a timeout
         - added samples/room_lister* and samples/conference_lister
         - redesigned disco mechanism a bit
         - added error collection event for nicer error reporting capabilities
         - added samples/disco_test
         - implemented XEP-0004
         - added samples/limit_searcher
         - added simxml()
         - splitting up large packets when writing
         - fixed bad link in documentation of Net::XMPP2::IM::Connection
         - added samples/simple_example_1
         - fixed some typos (thanks to lynx aka carlo)

0.01 Thu Jul  5 19:34:30 CEST 2007