@@ -1,0 +1,1 @@
+perl -MExtUtils::Manifest -e 'ExtUtils::Manifest::filecheck()'
