@@ -15,27 +15,24 @@ $cl->reg_cb (
       $cl->send_message (
          "Hi! I'm too stupid to adjust examples!" => 'elmex@jabber.org', undef, 'chat'
       );
-      0
+      $cl->unreg_me
    },
    recv_stanza_xml => sub {
       my ($cl, $acc, $node) = @_;
       print 'STANZA:' . $node->as_string . "\n";
-      1
+      $cl->unreg_me;
    },
    disconnect => sub {
       my ($cl, $acc, $h, $p, $reas) = @_;
       print "disconnect ($h:$p): $reas\n";
-      1
    },
    error => sub {
       my ($cl, $acc, $err) = @_;
       print "ERROR: " . $err->string . "\n";
-      1
    },
    message => sub {
       my ($cl, $acc, $msg) = @_;
       print "message from: " . $msg->from . ": " . $msg->any_body . "\n";
-      1
    }
 );
 $cl->start;
