@@ -1,6 +1,10 @@
 Revision history for Net-XMPP2
 
 0.03
+         - fundamentally changed how events work, it's now less
+           errorprone for the programmer (you don't have to return
+           a true value now all the time and can call $self->unreg_me
+           for unregistering a callback).
          - implemented SAX event generator for easier integration
            with other XML libraries and generation of DOM.
          - added the possibility to completly restore the original
